--- a/interface/mailbot/app/src/main/AndroidManifest.xml
+++ b/interface/mailbot/app/src/main/AndroidManifest.xml
@@ -9,13 +9,30 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity_Collection1"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".DetailsActivity_Collection1"
+            android:screenOrientation="landscape">
+        </activity>
+
+        <activity
+            android:name=".LockerActivity_Collection1"
+            android:screenOrientation="landscape">
+        </activity>
+
+        <activity
+            android:name=".EndActivity_Collection1"
+            android:screenOrientation="landscape">
+        </activity>
+
     </application>
 
 </manifest>
