--- a/interface/mailbot/app/src/main/AndroidManifest.xml
+++ b/interface/mailbot/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
-            android:name=".MainActivity_Collection1"
+            android:name=".CollectionMode.MainActivity_Collection1"
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,21 +18,29 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
-            android:name=".DetailsActivity_Collection1"
+            android:name=".CollectionMode.DetailsActivity_Collection1"
             android:screenOrientation="landscape">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".CollectionMode.MainActivity_Collection1"/>
         </activity>
 
         <activity
-            android:name=".LockerActivity_Collection1"
+            android:name=".CollectionMode.LockerActivity_Collection1"
             android:screenOrientation="landscape">
+            <meta-data
+                android:value="android.support.PARENT_ACTIVITY"
+                android:name=".CollectionMode.MainActivity_Collection1"/>
         </activity>
 
         <activity
-            android:name=".EndActivity_Collection1"
+            android:name=".CollectionMode.EndActivity_Collection1"
             android:screenOrientation="landscape">
+            <meta-data
+                android:value="android.support.PARENT_ACTIVITY"
+                android:name=".CollectionMode.MainActivity_Collection1"/>
         </activity>
-
     </application>
-
 </manifest>
