--- a/interface/mailbot/app/build.gradle
+++ b/interface/mailbot/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.extcord.jg3215.mailbot"
-        minSdkVersion 26
+        minSdkVersion 23
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -23,7 +23,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
-    implementation 'com.github.felHR85:UsbSerial:5.0.0'
+    //implementation 'com.github.felHR85:UsbSerial:5.0.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
