--- a/interface/mailbot/app/src/main/AndroidManifest.xml
+++ b/interface/mailbot/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.extcord.jg3215.mailbot">
 
+    <uses-feature android:name="android.hardware.usb.host" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -25,6 +27,13 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".collection_mode.MainActivity_Collection"/>
+            <!--USB capabilities-->
+            <intent-filter>
+                <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
+            </intent-filter>
+            <meta-data
+                android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED"
+                android:resource="@xml/device_filter" />
         </activity>
 
         <activity
@@ -49,6 +58,14 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".collection_mode.MainActivity_Collection"/>
+
+            <!--USB capabilities-->
+            <intent-filter>
+                <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
+            </intent-filter>
+            <meta-data
+                android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED"
+                android:resource="@xml/device_filter" />
         </activity>
 
         <activity
@@ -65,6 +82,15 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".delivery_mode.EnRouteActivity_Delivery"/>
+
+            <!--USB capabilities-->
+            <intent-filter>
+                <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
+            </intent-filter>
+            <meta-data
+                android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED"
+                android:resource="@xml/device_filter" />
+
         </activity>
 
         <activity
@@ -74,5 +100,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".delivery_mode.EnRouteActivity_Delivery"/>
         </activity>
+
     </application>
 </manifest>
