--- a/interface/mailbot/app/src/main/AndroidManifest.xml
+++ b/interface/mailbot/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.extcord.jg3215.mailbot">
+    
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-feature android:name="android.hardware.usb.host" />
 
@@ -11,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
+        
         <activity
             android:name=".collection_mode.MainActivity_Collection"
             android:screenOrientation="landscape">
