--- a/interface/mailbot/app/src/main/AndroidManifest.xml
+++ b/interface/mailbot/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         
         <activity
             android:name=".collection_mode.MainActivity_Collection"
-            android:screenOrientation="landscape">
+            android:screenOrientation="landscape"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
