--- a/movement/catkin_ws/src/mailbot/config/costmap_common_params.yaml
+++ b/movement/catkin_ws/src/mailbot/config/costmap_common_params.yaml
@@ -2,12 +2,14 @@ obstacle_range: 2.5
 raytrace_range: 3.0
 # footprint: [[x0, y0], [x1, y1], ... [xn, yn]]
 robot_radius: 0.55
-inflation_radius: 0.55
+inflation_radius: 0.25
 
 # observation_sources: laser_scan_sensor point_cloud_sensor
-observation_sources: laser_scan_sensor 
+observation_sources: pointcloud_to_scan_sensor kinect_to_scan_sensor
 
+pointcloud_to_scan_sensor: {sensor_frame: base_link, data_type: LaserScan, topic: scan, marking: true, clearing: true}
 
-laser_scan_sensor: {sensor_frame: base_link, data_type: LaserScan, topic: scan, marking: true, clearing: true}
+kinect_to_scan_sensor: {sensor_frame: base_link, data_type: LaserScan, topic: kinect_scan, marking: true, clearing: true}
+
 #
 # point_cloud_sensor: {sensor_frame: frame_name, data_type: PointCloud, topic: topic_name, marking: true, clearing: true}
