--- a/movement/catkin_ws/src/mailbot/config/base_local_planner_params.yaml
+++ b/movement/catkin_ws/src/mailbot/config/base_local_planner_params.yaml
@@ -1,11 +1,12 @@
 TrajectoryPlannerROS:
-  max_vel_x: 0.25
+  max_vel_x: 0.1
   min_vel_x: 0.05
-  max_vel_theta: 0.1
+  max_vel_theta: 0.05
   min_in_place_vel_theta: 0.005
 
-  acc_lim_theta: 3.2
-  acc_lim_x: 2.5
-  acc_lim_y: 2.5
+  acc_lim_theta: 1.5
+  acc_lim_x: 1
+  acc_lim_y: 1
 
   holonomic_robot: true
+  meter_scoring: true
