--- a/movement/catkin_ws/src/mailbot/config/costmap_common_params.yaml
+++ b/movement/catkin_ws/src/mailbot/config/costmap_common_params.yaml
@@ -1,11 +1,12 @@
-obstacle_range: 2.5
-raytrace_range: 3.0
+obstacle_range: 1.5
+raytrace_range: 2.0
 # footprint: [[x0, y0], [x1, y1], ... [xn, yn]]
 robot_radius: 0.55
-inflation_radius: 0.25
+inflation_radius: 0.2
 
 # observation_sources: laser_scan_sensor point_cloud_sensor
-observation_sources: pointcloud_to_scan_sensor kinect_to_scan_sensor
+observation_sources:  kinect_to_scan_sensor pointcloud_to_scan_sensor
+# observation_sources: kinect_to_scan_sensor
 
 pointcloud_to_scan_sensor: {sensor_frame: base_link, data_type: LaserScan, topic: scan, marking: true, clearing: true}
 
