--- a/interface/mailbot/app/src/main/AndroidManifest.xml
+++ b/interface/mailbot/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
-    <uses-feature android:name="android.hardware.usb.host" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
 
     <application
         android:allowBackup="true"
@@ -37,13 +37,6 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".collection_mode.MainActivity_Collection"/>
-            <!--USB capabilities-->
-            <!--<intent-filter>
-                <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
-            </intent-filter>
-            <meta-data
-                android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED"
-                android:resource="@xml/device_filter" />-->
         </activity>
 
         <activity
@@ -68,14 +61,6 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".collection_mode.MainActivity_Collection"/>
-
-            <!--USB capabilities-->
-            <!--<intent-filter>
-                <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
-            </intent-filter>
-            <meta-data
-                android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED"
-                android:resource="@xml/device_filter" />-->
         </activity>
 
         <activity
@@ -92,15 +77,6 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".delivery_mode.EnRouteActivity_Delivery"/>
-
-            <!--USB capabilities-->
-            <!--<intent-filter>
-                <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
-            </intent-filter>
-            <meta-data
-                android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED"
-                android:resource="@xml/device_filter" />-->
-
         </activity>
 
         <activity
@@ -110,6 +86,5 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".delivery_mode.EnRouteActivity_Delivery"/>
         </activity>
-
     </application>
 </manifest>
