--- a/movement/catkin_ws/src/mailbot/config/base_local_planner_params.yaml
+++ b/movement/catkin_ws/src/mailbot/config/base_local_planner_params.yaml
@@ -1,12 +1,15 @@
-TrajectoryPlannerROS:
-  max_vel_x: 0.1
-  min_vel_x: 0.05
-  max_vel_theta: 0.05
+dwaPlannerROS:
+  max_vel_x: 0.15
+  min_vel_x: 0.1
+  max_vel_theta: 0.02
   min_in_place_vel_theta: 0.005
 
-  acc_lim_theta: 1.5
-  acc_lim_x: 1
-  acc_lim_y: 1
+  acc_lim_theta: 0.05
+  acc_lim_x: 0.2
+  acc_lim_y: 0.2
 
   holonomic_robot: true
   meter_scoring: true
+
+
+  max_rot_vel: 0.01
