--- a/movement/catkin_ws/src/mailbot/config/costmap_common_params.yaml
+++ b/movement/catkin_ws/src/mailbot/config/costmap_common_params.yaml
@@ -1,16 +1,18 @@
-obstacle_range: 1.5
+obstacle_range: 3
 raytrace_range: 2.0
 # footprint: [[x0, y0], [x1, y1], ... [xn, yn]]
-robot_radius: 0.55
+robot_radius: 0.4
 inflation_radius: 0.2
 
 # observation_sources: laser_scan_sensor point_cloud_sensor
-observation_sources:  kinect_to_scan_sensor pointcloud_to_scan_sensor
-# observation_sources: kinect_to_scan_sensor
+# observation_sources:  kinect_to_scan_sensor pointcloud_to_scan_sensor
+observation_sources: kinect_to_scan_sensor
 
-pointcloud_to_scan_sensor: {sensor_frame: base_link, data_type: LaserScan, topic: scan, marking: true, clearing: true}
+# uncomment this for using sonar pointcloud as laserscan
+# pointcloud_to_scan_sensor: {sensor_frame: base_link, data_type: LaserScan, topic: scan, marking: true, clearing: true}
 
-kinect_to_scan_sensor: {sensor_frame: base_link, data_type: LaserScan, topic: kinect_scan, marking: true, clearing: true}
+kinect_to_scan_sensor: {sensor_frame: base_link, data_type: LaserScan, topic: kinect_scan, marking: true, clearing: true, inf_is_valid: true}
+# inf_is_valid is required for us to be able to clear the costmap (when there are no data points it assumes there is no obstacle)
 
 #
 # point_cloud_sensor: {sensor_frame: frame_name, data_type: PointCloud, topic: topic_name, marking: true, clearing: true}
