--- a/movement/catkin_ws/src/mailbot/config/local_costmap_params.yaml
+++ b/movement/catkin_ws/src/mailbot/config/local_costmap_params.yaml
@@ -3,8 +3,10 @@ local_costmap:
   robot_base_frame: base_link
   update_frequency: 5.0
   publish_frequency: 3.0
-  static_map: true
+  static_map: false
   rolling_window: true
   width: 6.0
   height: 6.0
   resolution: 0.05
+
+  inf_is_valid: true
