--- a/movement/catkin_ws/src/mailbot/config/base_local_planner_params.yaml
+++ b/movement/catkin_ws/src/mailbot/config/base_local_planner_params.yaml
@@ -1,15 +1,17 @@
-dwaPlannerROS:
-  max_vel_x: 0.15
-  min_vel_x: 0.1
-  max_vel_theta: 0.02
-  min_in_place_vel_theta: 0.005
+DWAPlannerROS:
+  # max_vel_x: 0.5
+  # min_vel_x: 0.15
+  max_vel_theta: 0.2
+  min_in_place_vel_theta: 0.1
 
-  acc_lim_theta: 0.05
-  acc_lim_x: 0.2
-  acc_lim_y: 0.2
+  # acc_lim_theta: 0.05
+  # acc_lim_x: 0.2
+  # acc_lim_y: 0.2
 
-  holonomic_robot: true
-  meter_scoring: true
+  # holonomic_robot: true
+  # meter_scoring: true
 
 
-  max_rot_vel: 0.01
+  max_rot_vel: 0.2
+  min_rot_vel: 0.01
+  # occdist_scale: 0.02
